--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <p id='rgb-color'>(168, 34, 1)</p>
 </body>
 <script src="script.js"></script>
 </html>
