--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p id='rgb-color'>(168, 34, 1)</p>
+  <div id='infos'>
+    <p id='rgb-color'>(168, 34, 1)</p>
+  </div>
+  <div id='container-ball'>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+  </div>
+  <div>
+    <p id="answer">Escolha uma cor</p>
+  </div>
 </body>
 <script src="script.js"></script>
 </html>
