--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </div>
   <div>
     <p id="answer">Escolha uma cor</p>
+    <button id="reset-game">Reset game</button>
   </div>
 </body>
 <script src="script.js"></script>
