--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id='infos'>
     <p id='rgb-color'>(168, 34, 1)</p>
+    <p>placar: <span id="score">0</span></p>
   </div>
   <div id='container-ball'>
     <div class="ball"></div>
